--- a/src/main/resources/templates/meals_2.html
+++ b/src/main/resources/templates/meals_2.html
@@ -21,19 +21,18 @@
                 <div class="card-body px-4 py-3">
                     <div class="row align-items-center">
                         <div class="col-9">
-                            <h4 class="fw-semibold mb-8 text-capitalize"><span th:text="${session.mass.name}"></span></h4>
-                            <h4 class="fw-semibold mb-8">Mass Manager - <span th:text="${session.mass.user.firstName + ' ' + session.mass.user.lastName}"></span></h4>
+                            <h4 class="fw-semibold mb-8 text-capitalize">Add Meal Into - <span th:text="${session.mass.name}"></span></h4>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a class="text-muted " th:href="@{/}">Dashboard</a></li>
                                     <li class="breadcrumb-item"><a class="text-muted " th:href="@{/mass}">All Mass</a></li>
-                                    <li class="breadcrumb-item" aria-current="page" th:text="${session.mass.name + ' Mass Members'}"></li>
+                                    <li class="breadcrumb-item" aria-current="page" th:text="${session.mass.name + ' Mass'}"></li>
                                 </ol>
                             </nav>
                         </div>
                         <div class="col-3">
                             <div class="text-center mb-n5">
-                                <img th:src="@{../../../images/breadcrumb/ChatBc.png}" alt="..." class="img-fluid mb-n4">
+                                <img th:src="@{../../../../../images/breadcrumb/ChatBc.png}" alt="..." class="img-fluid mb-n4">
                             </div>
                         </div>
                     </div>
