--- a/src/main/resources/templates/mass_members.html
+++ b/src/main/resources/templates/mass_members.html
@@ -59,7 +59,7 @@
                             <i class="ti ti-checkup-list text-white me-1 fs-5"></i> Meal List
                         </a>
                         <a th:href="@{/mass/{url}/meal/new (url = ${session.mass.url})}" class="btn btn-success d-flex align-items-center me-7">
-                            <i class="ti ti-clock-plus text-white me-1 fs-5"></i> Add Meal
+                            <i class="ti ti-brand-deliveroo text-white me-1 fs-5"></i> Add Meal
                         </a>
                         <a th:href="@{/mass/{url}/new (url = ${session.mass.url})}" class="btn btn-primary d-flex align-items-center">
                             <i class="ti ti-user-plus text-white me-1 fs-5"></i> Add New Member
