--- a/src/main/resources/templates/meals.html
+++ b/src/main/resources/templates/meals.html
@@ -21,11 +21,12 @@
                 <div class="card-body px-4 py-3">
                     <div class="row align-items-center">
                         <div class="col-9">
-                            <h4 class="fw-semibold mb-8 text-capitalize"><span th:text="${session.mass.name}"></span> - Meals</h4>
+                            <h4 class="fw-semibold mb-8 text-capitalize"><span th:text="${session.mass.name}"></span> - Meals Management</h4>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a class="text-muted " th:href="@{/}">Dashboard</a></li>
                                     <li class="breadcrumb-item"><a class="text-muted " th:href="@{/mass}">All Mass</a></li>
+                                    <li class="breadcrumb-item"><a class="text-muted " th:href="@{/mass/{url} (url = ${session.mass.url})}" th:text="${session.mass.name  + ' Mass'}"></a></li>
                                     <li class="breadcrumb-item" aria-current="page">Meals</li>
                                 </ol>
                             </nav>
@@ -51,6 +52,12 @@
                         <a th:href="@{/mass/{url}/meal/new (url = ${session.mass.url})}" class="btn btn-success d-flex align-items-center me-7">
                             <i class="ti ti-brand-deliveroo text-white me-1 fs-5"></i> Add Meal
                         </a>
+                        <a th:href="@{/mass/{url}/meal/date/new (url = ${session.mass.url})}" class="btn btn-info d-flex align-items-center me-7">
+                            <i class="ti ti-file-time text-white me-1 fs-5"></i> Add Meal Date
+                        </a>
+                        <a th:href="@{/mass/{url}/meal/time/new (url = ${session.mass.url})}" class="btn btn-success d-flex align-items-center me-7">
+                            <i class="ti ti-clock-plus text-white me-1 fs-5"></i> Add Meal Time
+                        </a>
                     </div>
                 </div>
             </div>
@@ -61,6 +68,9 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body">
+                                <div class="mb-2">
+                                    <h5 class="mb-0">All Meals</h5>
+                                </div>
                                 <div class="table-responsive">
                                     <table id="zero_config"
                                            class="table border table-striped table-bordered text-nowrap">
