--- a/src/main/resources/templates/new_meal_date_2.html
+++ b/src/main/resources/templates/new_meal_date_2.html
@@ -21,14 +21,14 @@
                 <div class="card-body px-4 py-3">
                     <div class="row align-items-center">
                         <div class="col-9">
-                            <h4 class="fw-semibold mb-8">Add Meal Time Into - <span th:text="${session.mass.name + ' Mass'}"></span></h4>
+                            <h4 class="fw-semibold mb-8">Add Meal Time Into - <span th:text="${mealDate.mass.name + ' Mass'}"></span></h4>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a class="text-muted " th:href="@{/}">Dashboard</a></li>
                                     <li class="breadcrumb-item"><a class="text-muted " th:href="@{/mass}">All Mass</a></li>
-                                    <li class="breadcrumb-item"><a class="text-muted " th:href="@{/mass/{url} (url = ${session.mass.url})}" th:text="${session.mass.name + ' Mass'}">All Mass</a></li>
-                                    <li class="breadcrumb-item"><a class="text-muted " th:href="@{/mass/{url}/meal (url = ${session.mass.url})}" th:text="${session.mass.name + ' Mass'}">All Mass</a></li>
-                                    <li class="breadcrumb-item" aria-current="page">Add Meal</li>
+                                    <li class="breadcrumb-item"><a class="text-muted " th:href="@{/mass/{url} (url = ${mealDate.mass.url})}" th:text="${mealDate.mass.name + ' Mass'}">All Mass</a></li>
+                                    <li class="breadcrumb-item"><a class="text-muted " th:href="@{/mass/{url}/meal (url = ${mealDate.mass.url})}" th:text="${mealDate.mass.name + ' Mass'}">All Mass</a></li>
+                                    <li class="breadcrumb-item" aria-current="page">Add Meal Date</li>
                                 </ol>
                             </nav>
                         </div>
@@ -52,79 +52,47 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body">
-                                <form th:action="@{/mass/{url}/meal/new/save (url = ${session.mass.url})}" th:object="${meal}" method="post">
+                                <form th:action="@{/mass/{url}/meal/date/new/save (url = ${mealDate.mass.url})}" th:object="${mealDate}" method="post">
                                     <div class="row">
-                                        <div class="col-md-12">
+                                        <div class="col-md-6">
                                             <div class="mb-3 contact-name">
                                                 <h5><label for="mass">Mass</label></h5>
-                                                <input type="text" id="mass" th:value="${session.mass.name}" readonly required class="form-control" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="mb-3 contact-occupation">
-                                                <h5><label for="name">Meal Name</label></h5>
-                                                <input class="form-control" type="text" required id="name" th:field="*{name}">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="mb-3 contact-occupation">
-                                                <h5><label for="price">Meal Price</label></h5>
-                                                <input class="form-control" type="number" required id="price" th:field="*{price}">
+                                                <input type="text" id="mass" th:value="${mealDate.mass.name}" readonly required class="form-control"/>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="mb-3 contact-occupation">
-                                                <h5><label for="allergens">Allergens</label></h5>
-                                                <input class="form-control" type="text" required id="allergens" th:field="*{allergens}">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="mb-3 contact-occupation">
-                                                <h5><label for="description">Start Time</label></h5>
-                                                <textarea class="form-control" th:field="*{description}" required id="description" rows="3" placeholder="Description..."></textarea>
+                                                <h5><label for="name">Meal Date Mass id</label></h5>
+                                                <input class="form-control" type="text" required id="name" readonly th:field="*{mass.id}">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="mb-3 contact-occupation">
-                                                <h5><label for="servingSize">Select Portion Size</label></h5>
-                                                <select th:field="*{servingSize}"
-                                                        id="servingSize"
-                                                        class="select2 form-control"
-                                                        style="width: 100%; height: 36px">
-
-                                                    <option value="1:1" selected>1:1</option>
-                                                    <option value="1:2">1:2</option>
-                                                    <option value="1:3">1:3</option>
-                                                </select>
+                                                <h5><label for="mealDate">Meal Price</label></h5>
+                                                <input type="date" class="form-control" id="mealDate" name="str_mealDate" th:value="mealDate.mealDate" required/>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="mb-3 contact-occupation">
-                                                <h5><label for="user">Select User</label></h5>
-                                                <select th:field="*{serveTime}"
+                                                <h5><label for="user">Select Meal</label></h5>
+                                                <select th:field="*{meal}"
                                                         id="user"
                                                         class="select2 form-control"
                                                         style="width: 100%; height: 36px">
 
-                                                    <option th:each="serveTime : ${serveTimes}"
-                                                            th:value="${serveTime.id}"
-                                                            th:text="${serveTime.identifier}"></option>
+                                                    <option th:each="mealEach : ${meals}"
+                                                            th:value="${mealEach.id}"
+                                                            th:text="${mealEach.name + ' - ' + mealEach.serveTime.identifier}"></option>
                                                 </select>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row my-6">
                                         <div class="modal-footer">
-                                            <button type="submit" class="btn btn-primary rounded-pill px-4 mx-3"><i class="ti ti-brand-deliveroo mx-2"></i> Add Meal</button>
-                                            <a th:href="@{/mass/{url}/meal (url = ${session.mass.url})}" class="btn btn-danger rounded-pill px-4"><i class="ti ti-arrow-back mx-2"></i> Discard </a>
+                                            <button type="submit" class="btn btn-primary rounded-pill px-4 mx-3"><i class="ti ti-file-time mx-2"></i> Add meal date</button>
+                                            <a th:href="@{/mass/{url}/meal (url = ${mealDate.mass.url})}" class="btn btn-danger rounded-pill px-4"><i class="ti ti-arrow-back mx-2"></i> Discard </a>
                                         </div>
                                     </div>
                                 </form>
