--- a/src/main/resources/templates/meals.html
+++ b/src/main/resources/templates/meals.html
@@ -55,6 +55,9 @@
                         <a th:href="@{/mass/{url}/meal/date/new (url = ${session.mass.url})}" class="btn btn-info d-flex align-items-center me-7">
                             <i class="ti ti-file-time text-white me-1 fs-5"></i> Add Meal Date
                         </a>
+                        <a th:href="@{/mass/{url}/meal/date (url = ${session.mass.url})}" class="btn btn-info d-flex align-items-center me-7">
+                            <i class="ti ti-clipboard-data text-white me-1 fs-5"></i> Meal Date List
+                        </a>
                         <a th:href="@{/mass/{url}/meal/time/new (url = ${session.mass.url})}" class="btn btn-success d-flex align-items-center me-7">
                             <i class="ti ti-clock-plus text-white me-1 fs-5"></i> Add Meal Time
                         </a>
