meal date edit with new page

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -29,7 +29,7 @@
   <!-- Prism CSS -->
   <link rel="stylesheet" th:href="@{../../../../../../libs/prismjs/themes/prism-okaidia.min.css}">
   <!-- Select 2 CSS -->
-  <link rel="stylesheet" th:href="@{../../../../libs/select2/dist/css/select2.min.css}">
+  <link rel="stylesheet" th:href="@{../../../../../../libs/select2/dist/css/select2.min.css}">
   <!--  Data Table-->
   <link rel="stylesheet" th:href="@{../../../../../../libs/datatables.net-bs5/css/dataTables.bootstrap5.min.css}">
 
@@ -110,7 +110,7 @@
           <li class="sidebar-item">
             <a class="sidebar-link has-arrow" href="#" aria-expanded="false">
                   <span class="d-flex">
-                    <i class="ti ti-users-group"></i>
+                    <i class="ti ti-user-bolt"></i>
                   </span>
               <span class="hide-menu">User Management</span>
             </a>
