--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -325,155 +325,6 @@
             <i class="ti ti-menu-2"></i>
           </a>
         </li>
-        <li class="nav-item d-none d-lg-block">
-          <a class="nav-link nav-icon-hover" href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <i class="ti ti-search"></i>
-          </a>
-        </li>
-      </ul>
-      <ul class="navbar-nav quick-links d-none d-lg-flex">
-        <li class="nav-item dropdown hover-dd d-none d-lg-block">
-          <a class="nav-link" href="javascript:void(0)" data-bs-toggle="dropdown">Apps<span class="mt-1"><i class="ti ti-chevron-down"></i></span></a>
-          <div class="dropdown-menu dropdown-menu-nav dropdown-menu-animate-up py-0">
-            <div class="row">
-              <div class="col-8">
-                <div class=" ps-7 pt-7">
-                  <div class="border-bottom">
-                    <div class="row">
-                      <div class="col-6">
-                        <div class="position-relative">
-                          <a href="app-chat.html" class="d-flex align-items-center pb-9 position-relative    ">
-                            <div class="bg-light rounded-1 me-3 p-6 d-flex align-items-center justify-content-center">
-                              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/svgs/icon-dd-chat.svg" alt="" class="img-fluid" width="24" height="24">
-                            </div>
-                            <div class="d-inline-block">
-                              <h6 class="mb-1 fw-semibold bg-hover-primary">Chat Application</h6>
-                              <span class="fs-2 d-block text-dark">New messages arrived</span>
-                            </div>
-                          </a>
-                          <a href="app-invoice.html" class="d-flex align-items-center pb-9 position-relative    ">
-                            <div class="bg-light rounded-1 me-3 p-6 d-flex align-items-center justify-content-center">
-                              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/svgs/icon-dd-invoice.svg" alt="" class="img-fluid" width="24" height="24">
-                            </div>
-                            <div class="d-inline-block">
-                              <h6 class="mb-1 fw-semibold bg-hover-primary">Invoice App</h6>
-                              <span class="fs-2 d-block text-dark">Get latest invoice</span>
-                            </div>
-                          </a>
-                          <a href="app-contact2.html" class="d-flex align-items-center pb-9 position-relative    ">
-                            <div class="bg-light rounded-1 me-3 p-6 d-flex align-items-center justify-content-center">
-                              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/svgs/icon-dd-mobile.svg" alt="" class="img-fluid" width="24" height="24">
-                            </div>
-                            <div class="d-inline-block">
-                              <h6 class="mb-1 fw-semibold bg-hover-primary">Contact Application</h6>
-                              <span class="fs-2 d-block text-dark">2 Unsaved Contacts</span>
-                            </div>
-                          </a>
-                          <a href="app-email.html" class="d-flex align-items-center pb-9 position-relative    ">
-                            <div class="bg-light rounded-1 me-3 p-6 d-flex align-items-center justify-content-center">
-                              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/svgs/icon-dd-message-box.svg" alt="" class="img-fluid" width="24" height="24">
-                            </div>
-                            <div class="d-inline-block">
-                              <h6 class="mb-1 fw-semibold bg-hover-primary">Email App</h6>
-                              <span class="fs-2 d-block text-dark">Get new emails</span>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-                      <div class="col-6">
-                        <div class="position-relative">
-                          <a href="page-user-profile.html" class="d-flex align-items-center pb-9 position-relative    ">
-                            <div class="bg-light rounded-1 me-3 p-6 d-flex align-items-center justify-content-center">
-                              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/svgs/icon-dd-cart.svg" alt="" class="img-fluid" width="24" height="24">
-                            </div>
-                            <div class="d-inline-block">
-                              <h6 class="mb-1 fw-semibold bg-hover-primary">User Profile</h6>
-                              <span class="fs-2 d-block text-dark">learn more information</span>
-                            </div>
-                          </a>
-                          <a href="app-calendar.html" class="d-flex align-items-center pb-9 position-relative    ">
-                            <div class="bg-light rounded-1 me-3 p-6 d-flex align-items-center justify-content-center">
-                              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/svgs/icon-dd-date.svg" alt="" class="img-fluid" width="24" height="24">
-                            </div>
-                            <div class="d-inline-block">
-                              <h6 class="mb-1 fw-semibold bg-hover-primary">Calendar App</h6>
-                              <span class="fs-2 d-block text-dark">Get dates</span>
-                            </div>
-                          </a>
-                          <a href="app-contact.html" class="d-flex align-items-center pb-9 position-relative    ">
-                            <div class="bg-light rounded-1 me-3 p-6 d-flex align-items-center justify-content-center">
-                              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/svgs/icon-dd-lifebuoy.svg" alt="" class="img-fluid" width="24" height="24">
-                            </div>
-                            <div class="d-inline-block">
-                              <h6 class="mb-1 fw-semibold bg-hover-primary">Contact List Table</h6>
-                              <span class="fs-2 d-block text-dark">Add new contact</span>
-                            </div>
-                          </a>
-                          <a href="app-notes.html" class="d-flex align-items-center pb-9 position-relative    ">
-                            <div class="bg-light rounded-1 me-3 p-6 d-flex align-items-center justify-content-center">
-                              <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/svgs/icon-dd-application.svg" alt="" class="img-fluid" width="24" height="24">
-                            </div>
-                            <div class="d-inline-block">
-                              <h6 class="mb-1 fw-semibold bg-hover-primary">Notes Application</h6>
-                              <span class="fs-2 d-block text-dark">To-do and Daily tasks</span>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row align-items-center py-3">
-                    <div class="col-8">
-                      <a class="fw-semibold text-dark d-flex align-items-center lh-1 " href="#"><i class="ti ti-help fs-6 me-2"></i>Frequently Asked Questions</a>
-                    </div>
-                    <div class="col-4">
-                      <div class="d-flex justify-content-end pe-4">
-                        <button class="btn btn-primary">Check</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-4 ms-n4">
-                <div class="position-relative p-7 border-start h-100">
-                  <h5 class="fs-5 mb-9 fw-semibold">Quick Links</h5>
-                  <ul class="">
-                    <li class="mb-3">
-                      <a class="fw-semibold text-dark bg-hover-primary    " href="page-pricing.html">Pricing Page</a>
-                    </li>
-                    <li class="mb-3">
-                      <a class="fw-semibold text-dark bg-hover-primary    " href="authentication-login.html">Authentication Design</a>
-                    </li>
-                    <li class="mb-3">
-                      <a class="fw-semibold text-dark bg-hover-primary    " href="authentication-register.html">Register Now</a>
-                    </li>
-                    <li class="mb-3">
-                      <a class="fw-semibold text-dark bg-hover-primary    " href="authentication-error.html">404 Error Page</a>
-                    </li>
-                    <li class="mb-3">
-                      <a class="fw-semibold text-dark bg-hover-primary    " href="app-notes.html">Notes App</a>
-                    </li>
-                    <li class="mb-3">
-                      <a class="fw-semibold text-dark bg-hover-primary    " href="page-user-profile.html">User Application</a>
-                    </li>
-                    <li class="mb-3">
-                      <a class="fw-semibold text-dark bg-hover-primary    " href="page-account-settings.html">Account Settings</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li class="nav-item dropdown-hover d-none d-lg-block">
-          <a class="nav-link" href="app-chat.html">Chat</a>
-        </li>
-        <li class="nav-item dropdown-hover d-none d-lg-block">
-          <a class="nav-link" href="app-calendar.html">Calendar</a>
-        </li>
-        <li class="nav-item dropdown-hover d-none d-lg-block">
-          <a class="nav-link" href="app-email.html">Email</a>
-        </li>
       </ul>
       <div class="d-block d-lg-none">
         <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/images/logos/dark-logo.svg" class="dark-logo" width="180" alt="" />
@@ -490,83 +341,6 @@
             <i class="ti ti-align-justified fs-7"></i>
           </a>
           <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-center">
-            <li class="nav-item">
-              <a class="nav-link notify-badge nav-icon-hover" href="javascript:void(0)" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-                <i class="ti ti-basket"></i>
-                <span class="badge rounded-pill bg-danger fs-2">2</span>
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="ti ti-bell-ringing"></i>
-                <div class="notification bg-primary rounded-circle"></div>
-              </a>
-              <div class="dropdown-menu content-dd dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
-                <div class="d-flex align-items-center justify-content-between py-3 px-7">
-                  <h5 class="mb-0 fs-5 fw-semibold">Notifications</h5>
-                  <span class="badge bg-primary rounded-4 px-3 py-1 lh-sm">5 new</span>
-                </div>
-                <div class="message-body" data-simplebar>
-                  <a href="javascript:void(0)" class="py-6 px-7 d-flex align-items-center dropdown-item">
-                          <span class="me-3">
-                            <img src="../../images/profile/user-1.jpg" alt="user" class="rounded-circle" width="48" height="48" />
-                          </span>
-                    <div class="w-75 d-inline-block v-middle">
-                      <h6 class="mb-1 fw-semibold">Roman Joined the Team!</h6>
-                      <span class="d-block">Congratulate him</span>
-                    </div>
-                  </a>
-                  <a href="javascript:void(0)" class="py-6 px-7 d-flex align-items-center dropdown-item">
-                          <span class="me-3">
-                            <img src="../../images/profile/user-2.jpg" alt="user" class="rounded-circle" width="48" height="48" />
-                          </span>
-                    <div class="w-75 d-inline-block v-middle">
-                      <h6 class="mb-1 fw-semibold">New message</h6>
-                      <span class="d-block">Salma sent you new message</span>
-                    </div>
-                  </a>
-                  <a href="javascript:void(0)" class="py-6 px-7 d-flex align-items-center dropdown-item">
-                          <span class="me-3">
-                            <img src="../../images/profile/user-3.jpg" alt="user" class="rounded-circle" width="48" height="48" />
-                          </span>
-                    <div class="w-75 d-inline-block v-middle">
-                      <h6 class="mb-1 fw-semibold">Bianca sent payment</h6>
-                      <span class="d-block">Check your earnings</span>
-                    </div>
-                  </a>
-                  <a href="javascript:void(0)" class="py-6 px-7 d-flex align-items-center dropdown-item">
-                          <span class="me-3">
-                            <img src="../../images/profile/user-4.jpg" alt="user" class="rounded-circle" width="48" height="48" />
-                          </span>
-                    <div class="w-75 d-inline-block v-middle">
-                      <h6 class="mb-1 fw-semibold">Jolly completed tasks</h6>
-                      <span class="d-block">Assign her new tasks</span>
-                    </div>
-                  </a>
-                  <a href="javascript:void(0)" class="py-6 px-7 d-flex align-items-center dropdown-item">
-                          <span class="me-3">
-                            <img src="../../images/profile/user-5.jpg" alt="user" class="rounded-circle" width="48" height="48" />
-                          </span>
-                    <div class="w-75 d-inline-block v-middle">
-                      <h6 class="mb-1 fw-semibold">John received payment</h6>
-                      <span class="d-block">$230 deducted from account</span>
-                    </div>
-                  </a>
-                  <a href="javascript:void(0)" class="py-6 px-7 d-flex align-items-center dropdown-item">
-                          <span class="me-3">
-                            <img src="../../images/profile/user-1.jpg" alt="user" class="rounded-circle" width="48" height="48" />
-                          </span>
-                    <div class="w-75 d-inline-block v-middle">
-                      <h6 class="mb-1 fw-semibold">Roman Joined the Team!</h6>
-                      <span class="d-block">Congratulate him</span>
-                    </div>
-                  </a>
-                </div>
-                <div class="py-6 px-7 mb-1">
-                  <button class="btn btn-outline-primary w-100"> See All Notifications </button>
-                </div>
-              </div>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link pe-0" href="javascript:void(0)" id="drop1" data-bs-toggle="dropdown" aria-expanded="false">
                 <div class="d-flex align-items-center">
@@ -719,6 +493,7 @@
     <script th:src="@{../../../../../../libs/select2/dist/js/select2.full.min.js}"></script>
     <script th:src="@{../../../../../../libs/select2/dist/js/select2.min.js}"></script>
     <script th:src="@{../../../../../../js/forms/select2.init.js}"></script>
+    <script th:src="@{../../../../../../js/apps/chat.js}"></script>
   </div>
 </body>
 </html>
