--- a/src/main/resources/templates/mass_members.html
+++ b/src/main/resources/templates/mass_members.html
@@ -26,7 +26,7 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a class="text-muted " th:href="@{/}">Dashboard</a></li>
-                                    <li class="breadcrumb-item"><a class="text-muted " th:href="@{/mass}">All Mass</a></li>
+                                    <li sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR', 'CREATOR')" class="breadcrumb-item"><a class="text-muted " th:href="@{/mass}">All Mass</a></li>
                                     <li class="breadcrumb-item" aria-current="page" th:text="${session.mass.name + ' Mass Members'}"></li>
                                 </ol>
                             </nav>
