--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,19 +18,35 @@
     <header th:replace="fragment :: header" class="app-header"></header>
 
     <div class="container-fluid">
+
+      <div class="mt-3 px-4 py-3" th:if="${success}">
+        <div th:replace="fragment :: successAlertBg"></div>
+      </div>
+      <div class="mt-3 mb-6 px-4 py-3" th:if="${error}">
+        <div th:replace="fragment :: errorAlertBg"></div>
+      </div>
+
       <div class="row">
-        <div class="col-md-6 col-lg-4" th:each="mass : ${massList}">
+        <div class="col-md-6 col-lg-4" th:each="massEach : ${massList}">
           <div class="card rounded-2 overflow-hidden hover-img">
             <div class="position-relative">
               <a href="javascript:void(0)"><img th:src="@{../../images/blog/mass-home.jpg}" class="card-img-top rounded-0" alt="Mass Image"></a>
-              <span class="badge bg-white text-dark fs-2 rounded-4 lh-sm mb-9 me-9 py-1 px-2 fw-semibold position-absolute bottom-0 end-0"><a th:href="${'tel:+88' + mass.contact}" th:text="${mass.contact}"></a></span>
-              <img th:src="@{../../images/profile/user-2.jpg}" th:alt="${mass.user.firstName + ' ' + mass.user.lastName}" class="img-fluid rounded-circle position-absolute bottom-0 start-0 mb-n9 ms-9" width="40" height="40" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Walter Palmer">
+              <span class="badge bg-white text-dark fs-2 rounded-4 lh-sm mb-9 me-9 py-1 px-2 fw-semibold position-absolute bottom-0 end-0"><a th:href="${'tel:+88' + massEach.contact}" th:text="${massEach.contact}"></a></span>
+              <img th:src="@{../../images/profile/user-2.jpg}" th:alt="${massEach.user.firstName + ' ' + massEach.user.lastName}" class="img-fluid rounded-circle position-absolute bottom-0 start-0 mb-n9 ms-9" width="40" height="40" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Walter Palmer">
             </div>
             <div class="card-body p-4">
-              <span class="badge text-bg-light fs-2 rounded-4 py-1 px-2 lh-sm  mt-3" th:text="${mass.user.firstName + ' ' + mass.user.lastName}"></span>
-              <a class="d-block my-4 fs-5 text-dark fw-semibold" th:href="@{'/mass/' + ${mass.url}}" th:text="${mass.name}"></a>
+              <span class="badge text-bg-light fs-2 rounded-4 py-1 px-2 lh-sm  mt-3" th:text="${massEach.user.firstName + ' ' + massEach.user.lastName}"></span>
+              <a class="d-block my-4 fs-5 text-dark fw-semibold" th:href="@{'/mass/' + ${massEach.url}}" th:text="${massEach.name}"></a>
+              <p class="text-muted" th:text="${massEach.address}"></p>
               <div class="d-flex align-items-center gap-4">
-                <div class="d-flex align-items-center gap-2"><i class="ti ti-users fs-5"></i><span th:text="${mass.getMessMemberList().size()}"></span></div>
+                <div class="d-flex align-items-center gap-2"><i class="ti ti-users fs-5"></i><span th:text="${massEach.getMessMemberList().size()}"></span></div>
+              </div>
+              <div class="align-items-center mt-3" sec:authorize="isAuthenticated()">
+                <form th:object="${massMember}" th:action="@{'/mass/' + ${massEach.url} + '/member/' + ${session.user.id} + '/request'}" method="post">
+                  <button type="submit" class="btn waves-effect waves-light btn-primary w-100">
+                    <i class="ti ti-user-share mx-2"></i> Send Member Request
+                  </button>
+                </form>
               </div>
             </div>
           </div>
@@ -40,7 +56,7 @@
   </div>
 </div>
 
-<!--  Mobilenavbar -->
+<!--  Mobile navbar -->
 <div th:replace="fragment :: mobilenav"></div>
 <div th:replace="fragment :: scripts"></div>
 </body>
