--- a/src/main/resources/templates/mass_members.html
+++ b/src/main/resources/templates/mass_members.html
@@ -39,6 +39,21 @@
                     </div>
                 </div>
             </div>
+            <div class="card bg-light-gray shadow-none position-relative overflow-hidden mb-2">
+                <div class="card-body px-4 py-3">
+                    <div class="row align-items-center">
+                        <div class="col-12">
+                            <h4 class="mb-0 fs-5 mb-3">Mass Information</h4>
+                            <p>Address: <span th:text="${session.mass.address}"></span></p>
+                            <p>Contact Number: <a th:href="${'tel:+88' + session.mass.contact}" th:text="${session.mass.contact}"></a></p>
+                            <p>Mass Email Address: <a th:href="${'mailto:' + session.mass.email}" th:text="${session.mass.email}"></a></p>
+                            <p>Manager Email Address: <a th:href="${'mailto:' + session.mass.user.username}" th:text="${session.mass.user.username}"></a></p>
+                            <p>Total Meals: <span th:text="${session.mass.getMealList().size()}"></span></p>
+                            <p>Total Members: <span th:text="${session.mass.getMessMemberList().size()}"></span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="mt-3 px-4 py-3" th:if="${success}">
                 <div th:replace="fragment :: successAlertBg"></div>
             </div>
@@ -66,11 +81,26 @@
                         </a>
                     </div>
                 </div>
+                <div class="row" sec:authorize="hasAnyAuthority('USER', 'MEMBER')">
+                    <div class="col text-end d-flex justify-content-end mt-3 mt-md-0">
+                        <form class="me-3" th:object="${massMember}" th:action="@{'/mass/' + ${session.mass.url} + '/member/' + ${session.user.id} + '/request'}" method="post">
+                            <button type="submit" class="btn waves-effect waves-light btn-primary w-100">
+                                <i class="ti ti-user-share mx-2"></i> Send Member Request
+                            </button>
+                        </form>
+                        <a th:href="@{/mass/{url}/meal (url = ${session.mass.url})}" class="btn btn-info d-flex align-items-center me-3">
+                            <i class="ti ti-checkup-list text-white me-1 fs-5"></i> All Meal List
+                        </a>
+                        <a th:href="@{/mass/{url}/meal/date (url = ${session.mass.url})}" class="btn btn-info d-flex align-items-center me-7">
+                            <i class="ti ti-clipboard-data text-white me-1 fs-5"></i> Meal Date List
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="mx-lg-9 mx-md-9 mx-xl-9 mx-xxl-9">
             <section class="mx-lg-9 mx-md-9 mx-xl-9 mx-xxl-9">
-                <div class="row">
+                <div class="row" sec:authorize="isAuthenticated()">
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body">
@@ -122,7 +152,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR', 'MANAGER')">
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body">
