--- a/src/main/resources/templates/member_meal.html
+++ b/src/main/resources/templates/member_meal.html
@@ -33,7 +33,7 @@
 				<tr>
 					<td><input type="number" name="quantity" th:field="*{quantity}"></td>
 					<td>
-						<select placeholder="Select Meal" required name="meal" id="meal" th:field="*{meal.id}" >
+						<select placeholder="Select Meal" required name="meal" id="meal" th:field="*{mealDate.id}" >
 							<option th:each="mealDateEach : ${mealDateService}"
 									th:value="${mealDateEach.id}"
 									th:text="${mealDateEach.meal.name} + ' - ' + ${#dates.format(mealDateEach.mealDate, 'dd-MM-yyyy')}"></option>
@@ -74,11 +74,11 @@
 				<td th:text="${member.id}">Meal Id</td>
 				<td th:text="${member.quantity}">Meal Quantity</td>
 				<td th:text="${member.user.username}">Meal User Name</td>
-				<td th:text="${member.meal.meal.name}">Meal Name</td>
-				<td th:text="${member.meal.meal.servingSize}">Meal Size</td>
-				<td th:text="${member.meal.meal.price}">Meal Price</td>
-				<td th:text="${member.meal.meal.price} * ${member.quantity}">Meal Price</td>
-				<td th:text="${#dates.format(member.meal.mealDate, 'dd-MM-yyyy')}">Meal Date</td>
+				<td th:text="${member.mealDate.meal.name}">Meal Name</td>
+				<td th:text="${member.mealDate.meal.servingSize}">Meal Size</td>
+				<td th:text="${member.mealDate.meal.price}">Meal Price</td>
+				<td th:text="${member.mealDate.meal.price} * ${member.quantity}">Meal Price</td>
+				<td th:text="${#dates.format(member.mealDate.mealDate, 'dd-MM-yyyy')}">Meal Date</td>
 				<td sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')">
 					<a th:href="@{'/meal/member/edit/' + ${member.id}}">Edit</a>
 					<a sec:authorize="hasAuthority('ADMIN')" th:href="@{'/meal/member/delete/' + ${member.id}}">Delete</a>
